fixed wrapper spacing and flex

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,6 @@
   text-align: center;
 }
 
-img , .img-container {
-  object-fit: contain;
-}
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
