--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,8 +1,27 @@
 
 .card {
     background-color: blue;
-    height: 200px;
-    width: 300px;
+    height: 250px;
+    border-radius: 2px;
+    width: 330px;
     position: relative;
+    margin: 1rem;
+    text-align: left;
 }
 
+.card > .img-container {
+    height: 100%;
+    overflow: hidden;
+    text-align: center;
+    background: purple;
+}
+
+.card > .img-container > img {
+    width: 60%;
+}
+
+.card > .content {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    font-size: 15px;
+}
